--- a/VectorPlay/index.html
+++ b/VectorPlay/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>CM :: Vector Play</title>
 	<script type="text/javascript" src="la.js"></script>
-	<script type="text/javascript" src="arctangent.js"></script>
+	<script type="text/javascript" src="sketch.js"></script>
 	<style type="text/css">
 	html, body {
 		margin: 0px;
