--- a/VectorPlay/index.html
+++ b/VectorPlay/index.html
@@ -16,5 +16,12 @@
 </head>
 <body>
 <canvas id="canvas"></canvas>
+<script>
+
+	setTimeout(function(){
+		render();
+	},5000);
+
+</script>
 </body>
 </html>
